src/test/ui/regions/regions-reborrow-from-shorter-mut-ref-mut-ref.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-reborrow-from-shorter-mut-ref-mut-ref.rs:4:5
   |
LL | fn copy_borrowed_ptr<'a, 'b, 'c>(p: &'a mut &'b mut &'c mut isize) -> &'b mut isize {
   |                      --  -- lifetime `'b` defined here
   |                      |
   |                      lifetime `'a` defined here
LL |     &mut ***p
   |     ^^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`

error: aborting due to previous error

